Extract some pytest stuff

--- a/holdmypics/core/templates/index.jinja
+++ b/holdmypics/core/templates/index.jinja
@@ -31,7 +31,7 @@
 
     <div class="row align-items-center justify-content-between endpoint-container">
       <code id="endpoint">
-        <a href="{{ image_url }}" target="_blank" rel="noreferrer noopener">{{ image_url }}</a>
+        <a id="endpoint-url" href="{{ image_url }}" target="_blank" rel="noreferrer noopener">{{ image_url }}</a>
       </code>
       <button
         id="copy-button"
