--- a/src/scss/components/_flex.scss
+++ b/src/scss/components/_flex.scss
@@ -1,11 +1,11 @@
 .align-items-center {
-  align-items: center;
+  align-items: center !important;
 }
 
 .justify-content-center {
-  justify-content: center;
+  justify-content: center !important;
 }
 
 .justify-content-between {
-  justify-content: space-between;
+  justify-content: space-between !important;
 }
