--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,11 +4,13 @@
 
 @import "./base/base";
 @import "./base/root";
+@import "./base/utils";
 
 @import "./components/buttons";
 @import "./components/flex";
 @import "./components/tooltips";
 
+@import "./layout/content";
 @import "./layout/footer";
 @import "./layout/forms";
 
