--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -5,7 +5,58 @@
 @import "../../../node_modules/rfs/scss.scss";
 
 @mixin font-scale($scale) {
+  // @debug "#{$scale} -> #{scale-value($scale)}";
   @include font-size(scale-value($scale));
+}
+
+@mixin prop-short($prop, $suffix, $values) {
+  $top: $prop + "-top" + if($suffix, "-#{suffix}", "");
+  $bottom: $prop + "-bottom" + if($suffix, "-#{suffix}", "");
+  $left: $prop + "-left" + if($suffix, "-#{suffix}", "");
+  $right: $prop + "-right" + if($suffix, "-#{suffix}", "");
+  $all: $prop + if($suffix, "-#{suffix}", "");
+
+  $values: comp-css-shorthand($values);
+  $n: list.length($values);
+  @if list-all($values) {
+    #{$all}: $values;
+  } @else {
+    @if nth($values, 1) {
+      #{$top}: list.nth($values, 1);
+    }
+    @if $n == 1 {
+      @if nth($values, 1) {
+        #{$right}: list.nth($values, 1);
+      }
+    } @else {
+      @if nth($values, 2) {
+        #{$right}: list.nth($values, 2);
+      }
+    }
+
+    @if $n == 2 {
+      @if list.nth($values, 1) {
+        #{$bottom}: list.nth($values, 1);
+      }
+      @if list.nth($values, 2) {
+        #{$left}: list.nth($values, 2);
+      }
+    } @else if $n == 3 {
+      @if list.nth($values, 3) {
+        #{$bottom}: list.nth($values, 3);
+      }
+      @if list.nth($values, 2) {
+        #{$left}: list.nth($values, 2);
+      }
+    } @else if $n == 4 {
+      @if list.nth($values, 3) {
+        #{$bottom}: list.nth($values, 3);
+      }
+      @if nth($values, 4) {
+        #{$left}: list.nth($values, 4);
+      }
+    }
+  }
 }
 
 @mixin prop-dir($property, $direction, $value) {
@@ -29,4 +80,20 @@
 @mixin sz($width, $height: $width) {
   height: $height;
   width: $width;
+}
+
+@mixin m-space($dir, $i) {
+  @include prop-dir(margin, $dir, space-value($i));
+}
+
+@mixin m-short($values) {
+  @include prop-short(margin, null, short-spaces($values));
+}
+
+@mixin p-short($values) {
+  @include prop-short(padding, null, short-spaces($values));
+}
+
+@mixin p-space($dir, $i) {
+  @include prop-dir(padding, $dir, space-value($i));
 }
