--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 $mq-breakpoints: (
   xs: 0,
   sm: 550px,
@@ -34,24 +36,49 @@ $rfs-factor: 11;
 $font-scale-min: -3;
 $font-scale-max: 3;
 
-$p0: #e4ecff;
-$p5: #b1e1fd;
-$p10: #96d2fb;
-$p20: #60b2f3;
-$p30: #3392e8;
+$grays: (
+  0: hsl(62, 10%, 99%),
+  10: hsl(62, 10%, 92%),
+  20: hsl(62, 10%, 81%),
+  30: hsl(62, 10%, 74%),
+  40: hsl(62, 10%, 65%),
+  50: hsl(62, 10%, 51%),
+  60: hsl(62, 10%, 42%),
+  70: hsl(62, 5%, 34%),
+  80: hsl(62, 3%, 15%),
+  90: hsl(62, 3%, 5%),
+);
 
-$p40: #1273d7;
-
-$p50: #0057c2;
-$p55: #006699;
-
-$p60: #0045a2;
-$p70: #00317c;
-
-$p80: #001d4f;
-$p90: #000b21;
+$primaries: (
+  0: #e4ecff,
+  5: #b1e1fd,
+  10: #96d2fb,
+  20: #60b2f3,
+  30: #3392e8,
+  40: #1273d7,
+  50: #0057c2,
+  55: #00317c,
+  70: #0045a2,
+  80: #001d4f,
+  90: #000b21,
+);
 
 $colors: (
-  // "primary": #cceeff,
-    "primary": $p40
+  "primary": map.get($primaries, 40),
+  "border": map.get($grays, 20),
 );
+
+$space: (
+  0: 0,
+  1: modular-scale(-4),
+  2: modular-scale(-2),
+  3: modular-scale(0),
+  4: modular-scale(2),
+  5: modular-scale(4),
+  6: modular-scale(6),
+  7: modular-scale(8),
+  8: modular-scale(10),
+);
+// @each $idx, $value in $space {
+//   @debug "#{$idx} -> #{$value}";
+// }
