--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,11 +1,13 @@
+@use "sass:map";
+
 footer {
-  border: 1px solid #e9ecef;
-  margin: 1.5rem 0;
-  padding: 1rem;
+  border: 1px solid var(--border);
   text-align: center;
   width: 100%;
+  @include m-short(4 0);
+  @include p-short(3);
   .footer-group {
-    padding-bottom: 1rem;
+    @include p-space("bottom", 3);
     &:last-child {
       padding-bottom: 0;
     }
@@ -15,7 +17,7 @@ footer {
   }
   h6 {
     @include font-scale(0);
-    margin: 0.5rem;
+    @include m-short(2);
     &:last-child {
       margin-top: 0;
     }
