--- a/holdmypics/core/templates/index.jinja
+++ b/holdmypics/core/templates/index.jinja
@@ -43,6 +43,8 @@
         <i class="d-none" data-icon="check" title="Copied"></i>
       </button>
     </div>
+    <div class="row justify-content-between">
+    </div>
   </div>
 
   <div class="row d-none">
