--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,4 +19,6 @@
 @import "./theme/fonts";
 @import "./theme/theme";
 
+/*! purgecss start ignore */
 @import "./vendor";
+/*! purgecss end ignore */
