--- a/src/scss/_vendor.scss
+++ b/src/scss/_vendor.scss
@@ -1,3 +1,5 @@
 @import "./vendor/pattern";
+/*! purgecss start ignore */
 @import "./vendor/sanitize";
 @import "./vendor/tippy";
+/*! purgecss end ignore */
