--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,7 +18,6 @@
 
 @import "./theme/fonts";
 @import "./theme/theme";
+@import "./theme/typography";
 
-/*! purgecss start ignore */
 @import "./vendor";
-/*! purgecss end ignore */
