--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -50,17 +50,17 @@ $grays: (
 );
 
 $primaries: (
-  0: #e4ecff,
-  5: #b1e1fd,
-  10: #96d2fb,
-  20: #60b2f3,
-  30: #3392e8,
-  40: #1273d7,
-  50: #0057c2,
-  55: #00317c,
-  70: #0045a2,
-  80: #001d4f,
-  90: #000b21,
+  0: hsl(222, 100%, 95%),
+  5: hsl(202, 95%, 84%),
+  10: hsl(204, 93%, 79%),
+  20: hsl(207, 86%, 66%),
+  30: hsl(209, 80%, 55%),
+  40: hsl(210, 85%, 46%),
+  50: hsl(213, 100%, 38%),
+  55: hsl(214, 100%, 32%),
+  70: hsl(216, 100%, 24%),
+  80: hsl(218, 100%, 15%),
+  90: hsl(220, 100%, 6%),
 );
 
 $colors: (
