--- a/holdmypics/core/templates/index.jinja
+++ b/holdmypics/core/templates/index.jinja
@@ -24,6 +24,10 @@
   </div>
 
   <div class="row justify-content-center text-row">
+    <h3><a href="https://app.holdmypics.com">Check out the new front end.</a></h3>
+  </div>
+
+  <div class="row justify-content-center text-row">
     <h2>
       <span id="img-count">~{{ count }}</span> Images Created
     </h2>
