--- a/holdmypics/core/templates/index.jinja
+++ b/holdmypics/core/templates/index.jinja
@@ -61,8 +61,8 @@
       disabled
       title="Copy image URL to clipboard."
     >
-      <i data-icon="copy" title="Copy to clipboard."></i>
-      <i class="d-none" data-icon="check" title="Copied"></i>
+      <i data-feather="copy" title="Copy to clipboard."></i>
+      <i class="d-none" data-feather="check" title="Copied"></i>
       <small class="ml-2">Copy to clipboard</small>
     </button>
   </div>
