Some frontend and dependency cleanup

--- a/holdmypics/core/templates/index.jinja
+++ b/holdmypics/core/templates/index.jinja
@@ -63,7 +63,6 @@
     >
       <i data-feather="copy" title="Copy to clipboard."></i>
       <i class="d-none" data-feather="check" title="Copied"></i>
-      <small class="ml-2">Copy to clipboard</small>
     </button>
   </div>
   {#
@@ -148,7 +147,7 @@
     </form>
   </div>
 
-  <div id="color-picker"></div>
+  {# <div id="color-picker"></div> #}
 
   <section id="routes">
     <h3>Routes</h3>
