--- a/src/scss/base/_root.scss
+++ b/src/scss/base/_root.scss
@@ -12,4 +12,8 @@
   @each $name, $color in $colors {
     --#{$name}: #{$color};
   }
+
+  --ring-color: currentcolor;
+  --ring-inset: ;
+  --ring-offset-width: 0px;
 }
