--- a/src/scss/_vendor.scss
+++ b/src/scss/_vendor.scss
@@ -1,5 +1,4 @@
-@import "./vendor/pattern";
-/*! purgecss start ignore */
+/* purgecss start ignore */
 @import "./vendor/sanitize";
 @import "./vendor/tippy";
-/*! purgecss end ignore */
+/* purgecss end ignore */
