--- a/holdmypics/core/templates/index.jinja
+++ b/holdmypics/core/templates/index.jinja
@@ -1,16 +1,6 @@
 {% extends "base-out.html" %}
 
-{% macro external(href, text) -%}
-<a href="{{ href }}" target="_blank" rel="noreferrer noopener">{{ text }}</a>
-{%- endmacro %}
-
-{% macro option(value, name, selected=false) -%}
-{% if selected %}
-<option selected value="{{ value }}">{{ name }}</option>
-{% else %}
-<option value="{{ value }}">{{ name }}</option>
-{% endif %}
-{%- endmacro %}
+{% from "./helpers.jinja" import external, option %}
 
 {% block content %}
 <div class="wrapper space-y-5">
@@ -26,7 +16,7 @@
       <h2><span id="img-count">~{{ count }}</span> Images Created</h2>
     </div>
 
-    <div class="row text-row pt-3">
+    <div class="row text-row pt-2">
       <h3 class="text-2xl"><a href="https://app.holdmypics.com">Check out the new front end.</a></h3>
     </div>
 
